--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ html{
 
 }
 @font-face {
-  font-family: 'minecraftregular';
+  font-family: 'vcr_font';
   src: url('fonts/minecraftregular-bmg3-webfont.woff2') format('woff2'),
        url('fonts/minecraftregular-bmg3-webfont.woff') format('woff');
   font-weight: normal;
@@ -43,8 +43,8 @@ html{
 }
 
 body {
-  font-family: "minecraftregular";
-  src:url("fonts/MINECRAFTREGULAR-NMK1.OTF") format("truetype");
+  font-family: "vcr_font";
+  src:url("fonts/VCR_OSD_MONO.ttf") format("truetype");
   background-color: #181818;
   color:white;
 }
@@ -52,8 +52,8 @@ body {
 .mcbold{
   color:#FFAA00;
   text-shadow: 3px 3px #000000;
-  font-family: "minecraftbold";
-  src:url("fonts/MINECRAFTBOLD-NMK1.OTF") format("truetype");
+  font-family: "vcr_font";
+  src:url("fonts/VCR_OSD_MONO.ttf") format("truetype");
 }
 
 img{
