--- a/styles.css
+++ b/styles.css
@@ -45,12 +45,12 @@ html{
 body {
   font-family: "vcr_font";
   src:url("fonts/VCR_OSD_MONO.ttf") format("truetype");
-  background-color: #181818;
+  background-color: #7E7E7E;
   color:white;
 }
 
 .mcbold{
-  color:#FFAA00;
+  color:#7E7E7E;
   text-shadow: 3px 3px #000000;
   font-family: "vcr_font";
   src:url("fonts/VCR_OSD_MONO.ttf") format("truetype");
@@ -65,7 +65,7 @@ hr{
 }
 
 .blur {
-  filter: blur(5px); /* Change the amount of blur as needed */
+  filter: blur(20px); /* Change the amount of blur as needed */
   transition: filter 0.5s ease;
 }
 
