--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
   color:#7E7E7E;
   text-shadow: 3px 3px #000000;
   font-family: "vcr_font";
-  src:url("fonts/VCR_OSD_MONO.ttf") format("truetype");
+  src:url("fonts/MINECRAFTBOLD-NMK1.OTF") format("truetype");
 }
 
 img{
