--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
   font-family: "vcr_font";
   src:url("fonts/VCR_OSD_MONO.ttf") format("truetype");
   background-color: #7E7E7E;
-  color:"7E7E7E";
+  color:7E7E7E;
 }
 
 .mcbold{
