--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ html{
 @font-face {
   font-family: 'vcr_font';
   src: url('fonts/vcr_osd_mono.ttf') format('truetype'),
-  font-weight: light;
+  font-weight: normal;
   font-style: normal;
 
 }
@@ -13,7 +13,7 @@ html{
 @font-face {
   font-family: 'arial';
   
-  font-weight: light;
+  font-weight: normal;
   font-style: normal;
 
 }
@@ -22,7 +22,7 @@ html{
   font-family: 'minecraftitalic';
   src: url('fonts/minecraftitalic-r8mo-webfont.woff2') format('woff2'),
        url('fonts/minecraftitalic-r8mo-webfont.woff') format('woff');
-  font-weight: light;
+  font-weight: normal;
   font-style: normal;
 
 }
@@ -30,7 +30,7 @@ html{
   font-family: 'vcr_font';
   src: url('fonts/minecraftregular-bmg3-webfont.woff2') format('woff2'),
        url('fonts/minecraftregular-bmg3-webfont.woff') format('woff');
-  font-weight: light;
+  font-weight: normal;
   font-style: normal;
 
 }
