--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ body {
 }
 
 .mcbold{
-  color:#371F76;
+  color:#5E5E5E;
   text-shadow: 3px 3px #000000;
   font-family: "minecraftbold";
   src:url("fonts/MINECRAFTBOLD-NMK1.OTF") format("truetype");
