--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,13 @@ body {
   src:url("fonts/MINECRAFTBOLD-NMK1.OTF") format("truetype");
 }
 
+.buttontext{
+  color:#5000A9;
+  text-shadow: 2px 2px #000000;
+  font-family: "minecraftbold";
+  src:url("fonts/MINECRAFTBOLD-NMK1.OTF") format("truetype");
+}
+
 img{
   border-radius:500px;
 }
@@ -82,12 +89,12 @@ hr{
   padding: 10px 20px;
   margin: 10px;
   background-color: #313131;
-  color: #fff;
+  color: #B27FE8;
   text-decoration: none;
   text-shadow: 2px 2px #181818;
   box-shadow: 3px 3px #000000;
   transition: background-color 0.3s;
 }
 .button:hover {
-  background-color: #282828;
+  background-color: #131313;
 }
