--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ body {
 }
 
 .buttontext{
-  color:#5000A9;
+  color:#575149;
   text-shadow: 2px 2px #000000;
   font-family: "minecraftbold";
   src:url("fonts/MINECRAFTBOLD-NMK1.OTF") format("truetype");
