--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ hr{
   padding: 10px 20px;
   margin: 10px;
   background-color: #313131;
-  color: #cf7b06;
+  color: #dbf3ff;
   text-decoration: none;
   text-shadow: 2px 2px #181818;
   box-shadow: 3px 3px #000000;
